--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "better-react-carousel": "^1.1.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.2",
